java 21, fixed multi-project build sub-projects